--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
@@ -21,8 +21,8 @@
     <script asp-append-version="true" src="~/Areas/Admin/js/page-image-viewer/ridics.project.page-image-viewer.bundle.js"></script>
     <script asp-append-version="true" src="~/Areas/Admin/js/page-list-editor/ridics.project.page-list-editor.bundle.js"></script>
     <script asp-append-version="true" src="~/js/itjakub.simplemde.tools.js"></script>
+    <script asp-append-version="true" src="~/js/ridics.text-api-client.js"></script>
     <script asp-append-version="true" src="~/Areas/Admin/js/edition-note/ridics.project.edition-note.main.js"></script>
-
     <script asp-append-version="true" src="~/lib/bootstrap-tokenfield/dist/bootstrap-tokenfield.js"></script>
     <script asp-append-version="true" src="~/lib/gijgo/dist/modular/js/core.min.js"></script>
     <script asp-append-version="true" src="~/lib/gijgo/dist/modular/js/tree.min.js"></script>
