--- a/UJCSystem/ITJakub.Web.Hub/Views/Text/TextEditor.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Text/TextEditor.cshtml
@@ -13,6 +13,7 @@
 }
 @section Scripts {
     <script asp-append-version="true" src="~/js/itjakub.simplemde.tools.js"></script>
+    <script asp-append-version="true" src="~/js/ridics.text-api-client.js"></script>
     <script asp-append-version="true" src="~/js/itjakub.text.editor.js"></script>
 }
 
