--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Publications.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Publications.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Scalesoft.Localization.AspNetCore
-@model ITJakub.Web.Hub.Areas.Admin.Models.ListViewModel<ITJakub.Web.Hub.Areas.Admin.Models.SnapshotViewModel>
+@model ITJakub.Web.Hub.Areas.Admin.Models.SnapshotListViewModel
 @inject ILocalizationService Localizer
 
 <div id="new-snapshot-container">
@@ -13,7 +13,7 @@
                     <div class="form-group">
                         <div class="search-input">
                             <label for="search">@Localizer.Translate("Comment", "Admin"):</label>
-                            <input class="form-control search-value" id="search" name="search" placeholder=" " value="@Model.SearchQuery" />
+                            <input class="form-control search-value" id="search" name="search" placeholder=" " value="@Model.ListWrapper.SearchQuery" />
                             <i class="fa fa-close reset-search-button"></i>
                         </div>
                         <div class="search-button">
@@ -37,14 +37,14 @@
                 </tr>
             </thead>
             <tbody id="snapshotListContainer" class="list-container">
-                @await Html.PartialAsync("../Publication/_SnapshotListPage", Model)
+                @await Html.PartialAsync("../Publication/_SnapshotListPage", Model.ListWrapper)
             </tbody>
         </table>
         <div id="snapshotLoadingContainer"></div>
         <div id="snapshotPagination" class="text-center"></div>
 
         <div class="project-bottom-buttons">
-            <a asp-controller="Publication" asp-action="NewSnapshot" asp-route-projectId="5" class="btn btn-default">@Localizer.Translate("CreateNewPublication", "Admin")</a>
+            <a asp-controller="Publication" asp-action="NewSnapshot" asp-route-projectId="@Model.ProjectId" class="btn btn-default">@Localizer.Translate("CreateNewPublication", "Admin")</a>
         </div>
     </div>
 </div>
