--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Metadata.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Metadata.cshtml
@@ -4,7 +4,7 @@
 
 @inject ILocalizationService Localizer
 <div class="row resource-tab-row-fix">
-    @await Html.PartialAsync("Work/SubView/_EditMetadataButtons")
+    @await Html.PartialAsync("Work/SubView/_EditMetadataButtons", Model)
 
     <div id="work-metadata-container">
         <div class="row">
@@ -57,26 +57,35 @@
                                 <div class="col-md-8">
                                     <div id="work-metadata-editors">
                                         <input type="hidden" id="add-editor-id-preview" />
-                                        @foreach (var editor in Model.ResponsiblePersons)
+                                        @if (Model.ResponsiblePersons.Count == 0)
                                         {
-                                            <div class="editor-item" data-id="@editor.Id" data-responsible-type-id="@editor.ResponsibleType.Id">
-                                                <span class="person-list-manipulate">
-                                                    <span class="btn-group-vertical move-button">
-                                                        <button type="button" class="btn btn-default move-person-up">
-                                                            <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                                                        </button>
-                                                        <button type="button" class="btn btn-default move-person-down">
-                                                            <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                                            <div class="control-label">
+                                                @Localizer.Translate("NoResponsiblePeople", "Admin")
+                                            </div>
+                                        }
+                                        else
+                                        {
+                                            @foreach (var editor in Model.ResponsiblePersons)
+                                            {
+                                                <div class="editor-item" data-id="@editor.Id" data-responsible-type-id="@editor.ResponsibleType.Id">
+                                                    <span class="person-list-manipulate">
+                                                        <span class="btn-group-vertical move-button">
+                                                            <button type="button" class="btn btn-default move-person-up">
+                                                                <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-default move-person-down">
+                                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                                                            </button>
+                                                        </span>
+                                                        <button class="btn btn-default remove-button" title="@Localizer.Translate("Delete", "Admin")">
+                                                            <span class="glyphicon glyphicon-remove"></span>
                                                         </button>
                                                     </span>
-                                                    <button class="btn btn-default remove-button" title="@Localizer.Translate("Delete", "Admin")">
-                                                        <span class="glyphicon glyphicon-remove"></span>
-                                                    </button>
-                                                </span>
-                                                <span class="text-as-form-control">
-                                                    <span class="person-name">@editor.FirstName</span><span class="person-surname">@editor.LastName - @editor.ResponsibleType.Text</span>
-                                                </span>
-                                            </div>
+                                                    <span class="text-as-form-control">
+                                                        <span class="person-name">@editor.FirstName</span><span class="person-surname">@editor.LastName - @editor.ResponsibleType.Text</span>
+                                                    </span>
+                                                </div>
+                                            }
                                         }
                                     </div>
 
@@ -145,26 +154,35 @@
                                 <div class="col-md-8">
                                     <div id="work-metadata-authors">
                                         <input type="hidden" id="add-author-id-preview" />
-                                        @foreach (var author in Model.Authors)
+                                        @if (Model.Authors.Count == 0)
                                         {
-                                            <div class="author-item" data-id="@author.Id">
-                                                <span class="person-list-manipulate">
-                                                    <span class="btn-group-vertical move-button">
-                                                        <button type="button" class="btn btn-default move-person-up">
-                                                            <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                                                        </button>
-                                                        <button type="button" class="btn btn-default move-person-down">
-                                                            <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                                            <div class="control-label">
+                                                @Localizer.Translate("NoAuthors", "Admin")
+                                            </div>
+                                        }
+                                        else
+                                        {
+                                            @foreach (var author in Model.Authors)
+                                            {
+                                                <div class="author-item" data-id="@author.Id">
+                                                    <span class="person-list-manipulate">
+                                                        <span class="btn-group-vertical move-button">
+                                                            <button type="button" class="btn btn-default move-person-up">
+                                                                <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-default move-person-down">
+                                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                                                            </button>
+                                                        </span>
+                                                        <button class="btn btn-default remove-button" title="@Localizer.Translate("Delete", "Admin")">
+                                                            <span class="glyphicon glyphicon-remove"></span>
                                                         </button>
                                                     </span>
-                                                    <button class="btn btn-default remove-button" title="@Localizer.Translate("Delete", "Admin")">
-                                                        <span class="glyphicon glyphicon-remove"></span>
-                                                    </button>
-                                                </span>
-                                                <span class="text-as-form-control">
-                                                    <span class="person-name">@author.FirstName</span><span class="person-surname">@author.LastName</span>
-                                                </span>
-                                            </div>
+                                                    <span class="text-as-form-control">
+                                                        <span class="person-name">@author.FirstName</span><span class="person-surname">@author.LastName</span>
+                                                    </span>
+                                                </div>
+                                            }
                                         }
                                     </div>
 
@@ -177,7 +195,9 @@
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="work-metadata-literary-original">@Localizer.Translate("LiteraryOriginal", "Admin")</label>
                                 <div class="col-md-7">
-                                    <span class="text-as-form-control" id="work-metadata-literary-original">@Model.LiteraryOriginalText</span>
+                                    <span class="text-as-form-control" id="work-metadata-literary-original">
+                                        @(string.IsNullOrEmpty(Model.LiteraryOriginalText) ? Localizer.Translate("NoLiteraryOriginal", "Admin") : Model.LiteraryOriginalText)
+                                    </span>
                                 </div>
                             </div>
                             <div>
