Metadata editor - date range picker - improve checkboxes

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -619,6 +619,7 @@ table {
 
             span {
                 margin-left: 3px;
+                cursor: pointer;
             }
         }
     }
