--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -624,6 +624,14 @@ table {
         }
     }
 
+    .input-group {
+        .btn {
+            border: none;
+            color: #fff;
+            background-color: @button-background-color;
+        }
+    }
+
     .person-list-manipulate {
         float: right;
     }
