--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Publication/_SnapshotListPage.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Publication/_SnapshotListPage.cshtml
@@ -3,15 +3,22 @@
 @inject ILocalizationService Localizer
 
 <tr class="paging-info hidden" data-total-count="@Model.TotalCount" data-page-size="@Model.PageSize" data-start="@Model.Start"></tr>
-@foreach (var snapshotViewModel in Model.List)
+@if (Model.List.Count == 0)
 {
-    <tr>
-        <td>@snapshotViewModel.PublishDate.ToLocalTime().ToString(Localizer.GetRequestCulture())</td>
-        <td>@snapshotViewModel.PublishedTextResourceCount</td>
-        <td>@snapshotViewModel.PublishedImageResourceCount</td>
-        <td>@snapshotViewModel.PublishedAudioResourceCount</td>
-        <td>@snapshotViewModel.Author</td>
-        <td>@snapshotViewModel.Comment</td>
-        <td class="duplicate-column"><a asp-controller="Publication" asp-action="DuplicateSnapshot" asp-route-snapshotId="@snapshotViewModel.Id">@Localizer.Translate("Duplicate", "Admin")</a></td>
-    </tr>
+
+}
+else
+{
+    @foreach (var snapshotViewModel in Model.List)
+    {
+        <tr>
+            <td>@snapshotViewModel.PublishDate.ToLocalTime().ToString(Localizer.GetRequestCulture())</td>
+            <td>@snapshotViewModel.PublishedTextResourceCount</td>
+            <td>@snapshotViewModel.PublishedImageResourceCount</td>
+            <td>@snapshotViewModel.PublishedAudioResourceCount</td>
+            <td>@snapshotViewModel.Author</td>
+            <td>@snapshotViewModel.Comment</td>
+            <td class="duplicate-column"><a asp-controller="Publication" asp-action="DuplicateSnapshot" asp-route-snapshotId="@snapshotViewModel.Id">@Localizer.Translate("Duplicate", "Admin")</a></td>
+        </tr>
+    }
 }
