--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1253,7 +1253,7 @@ table {
 
             td {
                 border: none;
-                
+
                 .form-control {
                     height: 28px;
                 }
@@ -1277,6 +1277,12 @@ table {
             &:first-of-type {
                 margin-left: 0;
             }
+        }
+    }
+
+    .info-row {
+        td {
+            padding: 1em;
         }
     }
 }
