Publish snapshot - edition note info

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1529,6 +1529,22 @@ table {
         }
     }
 
+    #snapshotInfo {
+        text-align: right;
+
+        .control-label {
+            text-align: left;
+
+            .btn {
+                margin-left: 1em;
+            }
+        }
+
+        #selectedResourcesCount {
+            margin-top: 6px;
+        }
+    }
+
     #resourcePreviewModal {
         img {
             width: 100%;
