--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Publication/PublicationsNew.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Publication/PublicationsNew.cshtml
@@ -104,21 +104,75 @@
                                 @await Html.PartialAsync("_PublicationsNewResources", Model, ViewData)
                             }
                         }
-                        <div class="project-bottom-buttons">
-                            <div class="row">
-                                <div class="col-xs-12 col-md-5 form-horizontal">
-                                    <div class="form-group">
-                                        <label for="comment" class="control-label col-md-3 col-lg-2">@Localizer.Translate("Comment", "Admin")</label>
-                                        <div class="col-md-9 col-lg-10">
-                                            <input type="text" asp-for="Comment" class="form-control" />
+                        @*<div class="project-bottom-buttons">
+            <div class="row">
+                <div class="col-xs-12 col-md-5 form-horizontal">
+                    <div class="form-group">
+                        <label for="comment" class="control-label col-md-3 col-lg-2">@Localizer.Translate("Comment", "Admin")</label>
+                        <div class="col-md-9 col-lg-10">
+                            <input type="text" asp-for="Comment" class="form-control" />
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-5">
+                    <div id="snapshotCreatingResult"></div>
+                </div>
+                <div class="col-xs-12 col-md-2">
+                    <button type="submit" class="btn btn-default">@Localizer.Translate("Save", "Admin")</button>
+                </div>
+            </div>
+        </div>*@
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <div class="collapse-icon">
+                                        <a data-toggle="collapse" href="#snapshotInfo" aria-expanded="true">
+                                            <span class="fa fa-chevron-up"></span>
+                                            <span class="fa fa-chevron-down"></span>
+                                        </a>
+                                    </div>
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" href="#snapshotInfo" aria-expanded="true">@Localizer.Translate("PublicationInfo", "Admin")</a>
+                                    </h4>
+                                </div>
+                                <div id="snapshotInfo" class="panel-collapse collapse in">
+                                    <div class="panel-body">
+                                        <div class="">
+                                            <div class="col-xs-12 form-horizontal">
+                                                <div class="form-group">
+                                                    <div class="control-label col-xs-12">
+                                                        @if (Model.EditionNoteText != null)
+                                                        {
+                                                            @Localizer.Translate("EditionNotePublish", "Admin")
+                                                            <div class="btn btn-default" data-toggle="modal" data-target="#editionNotePreviewModal">
+                                                                @Localizer.Translate("Preview", "Admin")
+                                                            </div>
+                                                        }
+                                                        else
+                                                        {
+                                                            @Localizer.Translate("NoEditionNote", "Admin")
+                                                        }
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-12 col-md-5 form-horizontal">
+                                                <div class="form-group">
+                                                    <label for="comment" class="control-label col-xs-12 col-md-3 col-lg-2">@Localizer.Translate("Comment", "Admin")</label>
+                                                    <div class="col-md-9 col-lg-10">
+                                                        <input type="text" asp-for="Comment" class="form-control" />
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-7 col-sm-10 col-md-6">
+                                                <div id="selectedResourcesCount"></div>
+                                            </div>
+                                            <div class="col-xs-5 col-sm-2 col-md-1">
+                                                <button type="submit" class="btn btn-default">@Localizer.Translate("Save", "Admin")</button>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-xs-12 col-md-5">
-                                    <div id="snapshotCreatingResult"></div>
-                                </div>
-                                <div class="col-xs-12 col-md-2">
-                                    <button type="submit" class="btn btn-default">@Localizer.Translate("Save", "Admin")</button>
                                 </div>
                             </div>
                         </div>
@@ -133,6 +187,20 @@
                                 </div>
                                 <div class="modal-body">
 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div id="editionNotePreviewModal" class="modal fade" role="dialog">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <span class="modal-title">@Localizer.Translate("EditionNote", "Admin")</span>
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                </div>
+                                <div class="modal-body">
+                                    @Html.Raw(Model.EditionNoteText)
                                 </div>
                             </div>
                         </div>
