Publish snapshot - improve work info

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1554,18 +1554,16 @@ table {
     }
 
     #snapshotInfo {
-        text-align: right;
-
-        .control-label {
-            text-align: left;
-
-            .btn {
-                margin-left: 1em;
-            }
+        .edition-note-preview {
+            margin-left: 1em;
         }
 
-        #selectedResourcesCount {
-            margin-top: 6px;
+        .control-input {
+            padding-top: 7px;
+        }
+
+        .form-horizontal > button {
+            float: right;
         }
     }
 
