--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Publication/PublicationsNew.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Publication/PublicationsNew.cshtml
@@ -104,24 +104,6 @@
                                 @await Html.PartialAsync("_PublicationsNewResources", Model, ViewData)
                             }
                         }
-                        @*<div class="project-bottom-buttons">
-            <div class="row">
-                <div class="col-xs-12 col-md-5 form-horizontal">
-                    <div class="form-group">
-                        <label for="comment" class="control-label col-md-3 col-lg-2">@Localizer.Translate("Comment", "Admin")</label>
-                        <div class="col-md-9 col-lg-10">
-                            <input type="text" asp-for="Comment" class="form-control" />
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-5">
-                    <div id="snapshotCreatingResult"></div>
-                </div>
-                <div class="col-xs-12 col-md-2">
-                    <button type="submit" class="btn btn-default">@Localizer.Translate("Save", "Admin")</button>
-                </div>
-            </div>
-        </div>*@
                     </div>
                     <div class="row">
                         <div class="col-xs-12">
@@ -142,34 +124,42 @@
                                         <div class="">
                                             <div class="col-xs-12 form-horizontal">
                                                 <div class="form-group">
-                                                    <div class="control-label col-xs-12">
-                                                        @if (Model.EditionNoteText != null)
-                                                        {
-                                                            @Localizer.Translate("EditionNotePublish", "Admin")
-                                                            <div class="btn btn-default" data-toggle="modal" data-target="#editionNotePreviewModal">
+                                                    <label class="control-label col-xs-12 col-sm-3 col-lg-2">
+                                                        @Localizer.Translate("EditionNote", "Admin"):
+                                                    </label>
+                                                    @if (Model.EditionNoteText != null)
+                                                    {
+                                                        <div class="col-md-9 col-lg-10">
+                                                            @Localizer.Translate("Yes")
+                                                            <div class="btn btn-default edition-note-preview" data-toggle="modal" data-target="#editionNotePreviewModal">
                                                                 @Localizer.Translate("Preview", "Admin")
                                                             </div>
-                                                        }
-                                                        else
-                                                        {
-                                                            @Localizer.Translate("NoEditionNote", "Admin")
-                                                        }
-                                                    </div>
+                                                        </div>
+                                                    }
+                                                    else
+                                                    {
+                                                        <div class="col-md-9 col-lg-10 control-input">
+                                                            @Localizer.Translate("No")
+                                                        </div>
+                                                    }
                                                 </div>
-                                            </div>
-                                            <div class="col-xs-12 col-sm-12 col-md-5 form-horizontal">
                                                 <div class="form-group">
-                                                    <label for="comment" class="control-label col-xs-12 col-md-3 col-lg-2">@Localizer.Translate("Comment", "Admin")</label>
-                                                    <div class="col-md-9 col-lg-10">
-                                                        <input type="text" asp-for="Comment" class="form-control" />
+                                                    <label class="control-label col-xs-12 col-sm-3 col-lg-2">@Localizer.Translate("SelectedResources", "Admin"):</label>
+                                                    <div class="col-sm-9 col-lg-10 control-input">
+                                                        <ul id="selectedResourcesCount">
+                                                            <li id="selectedTextResourcesCount"></li>
+                                                            <li id="selectedImageResourcesCount"></li>
+                                                            <li id="selectedAudioResourcesCount"></li>
+                                                        </ul>
                                                     </div>
                                                 </div>
-                                            </div>
-                                            <div class="col-xs-7 col-sm-10 col-md-6">
-                                                <div id="selectedResourcesCount"></div>
-                                            </div>
-                                            <div class="col-xs-5 col-sm-2 col-md-1">
-                                                <button type="submit" class="btn btn-default">@Localizer.Translate("Save", "Admin")</button>
+                                                <div class="form-group">
+                                                    <label for="commentInput" class="control-label col-xs-12 col-sm-3 col-lg-2">@Localizer.Translate("Comment", "Admin"):</label>
+                                                    <div class="col-sm-7 col-md-6 col-lg-5">
+                                                        <input type="text" id="commentInput" asp-for="Comment" class="form-control" />
+                                                    </div>
+                                                </div>
+                                                <button type="submit" class="btn btn-default">@Localizer.Translate("CreatePublication", "Admin")</button>
                                             </div>
                                         </div>
                                     </div>
