--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1560,6 +1560,10 @@ table {
 
         .control-input {
             padding-top: 7px;
+
+            li {
+                margin: 0.2em 0;
+            }
         }
 
         .form-horizontal > button {
