Page list editor - fix checking existing pages count

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_PageList.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_PageList.cshtml
@@ -202,7 +202,7 @@
                 <p class="info-dialog-message"></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "Admin")</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close2", "Admin")</button>
             </div>
         </div>
     </div>
