Don't display selected resource count as list

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Publication/PublicationsNew.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Publication/PublicationsNew.cshtml
@@ -125,8 +125,8 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-xs-12 col-sm-3 col-md-4 col-lg-3">@Localizer.Translate("SelectedResources", "Admin"):</label>
                                                     <div class="col-xs-12 col-sm-9 col-md-8 col-lg-9 control-input">
-                                                        <ul id="selectedResourcesCount">
-                                                        </ul>
+                                                        <div id="selectedResourcesCount">
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
