--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/Widget/_PermissionListWidget.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/Widget/_PermissionListWidget.cshtml
@@ -17,6 +17,7 @@
     </div>
 }
 
+<div class="paging-info hidden" data-total-count="@Model.TotalCount" data-page-size="@Model.PageSize" data-start="@Model.Start"></div>
 @if (Model != null && Model.List.Count != 0)
 {
     <div class="table-responsive">
